Fix position on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -82,7 +82,7 @@ a:hover {
 
 #credit {
   color: #444;
-  position: absolute;
+  position: fixed;
   right: 10px;
   bottom: 10px;
   font-size: 13px;
